
syntax = "proto3";

package rfccreator;

import "google/api/annotations.proto";
/*
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "examples/sub/message.proto";
import "examples/sub2/message.proto";
import "google/protobuf/timestamp.proto";
*/
message CreateRequest {
 string Name = 1;
 string Access = 2;
}

message CreateResponse {
 string Certificate=1;
}

message PingRequest {}
message PingResponse {}

service RFCManager {
 rpc CreateRFC(CreateRequest) returns (CreateResponse){ }
}